/* eslint-disable */

export const protobufPackage = "";

export interface SetUpMandateRequest {
  merchantId: string;
  serviceTypeId: string;
  hash: string;
  payerName: string;
  payerEmail: string;
  payerPhone: string;
  payerBankCode: string;
  payerAccount: string;
  requestId: string;
  amount: string;
  startDate: string;
  endDate: string;
  mandateType: string;
  maxNoOfDebits: string;
}

export const _PACKAGE_NAME = "";
